# pointcloud_registration

./: Readme.md  assignement.md  main.py  pyproject.toml
pcd_register/: registration_pipeline.py
tests/: test_registration_pipeline.py
